--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^43.3.1",
+    "@ckeditor/ckeditor5-react": "^9.4.0",
     "@tanstack/react-query": "^5.28.4",
     "axios": "^1.7.7",
     "lucide-react": "^0.344.0",
